--- a/data/config/modpack.ini
+++ b/data/config/modpack.ini
@@ -1,5 +1,5 @@
 [Common] # This section applies the 'MOD_' prefix to the flags so you don't have to.
-NAME="YOUR MOD NAME HERE"
+NAME="Hell Reborn"
 DESCRIPTION="YOUR MOD DESCRIPTION HERE"
 AUTHOR="YOU/YOUR TEAM HERE"
 VERSION="YOUR MOD'S VERSION HERE"
